--- a/pages/index.css
+++ b/pages/index.css
@@ -1,9 +1,8 @@
 .page {
-  display: block;
   min-width: 1100px;
   max-width: 1600 px;
   block-size: 1600px;
-  font-family: Inter, arial, sans-serif;
+  font-family: "Inter", arial, sans-serif;
   font-size: 16px;
   line-height: 20px;
 }
