--- a/pages/index.css
+++ b/pages/index.css
@@ -108,7 +108,9 @@
   width: 100%;
   height: 100vh;
   background-color: #0a2750;
-  background-image: url(images\background_recipes.svg) center/cover no-repeat;
+  background-position: center;
+  background-size: cover;
+  background-repeat: no-repeat;
   color: #fff;
   margin: 0;
 }
