updated html subtitle

--- a/pages/index.css
+++ b/pages/index.css
@@ -137,7 +137,7 @@
   margin: 0;
 }
 
-.recipe__subtitle {
+.recipes__subtitle {
   font-family: "Noto Serif", "Times New Roman", Times, serif;
   font-style: normal;
   font-weight: 500;
