--- a/pages/index.css
+++ b/pages/index.css
@@ -188,6 +188,7 @@
   text-align: center;
   font-family: "Inter";
   font-style: normal;
+  font-weight: 500;
   font-size: 44px;
   line-height: 52px;
 }
