--- a/pages/index.css
+++ b/pages/index.css
@@ -1,275 +1,7 @@
-.page {
-  min-width: 1100px;
-  max-width: 1600px;
-  block-size: 1600px;
-  font-family: "Inter", arial, sans-serif;
-  font-size: 16px;
-  line-height: 20px;
-  margin: auto;
-}
-
-.header {
-  padding: 30px 80px 40px;
-  min-height: 720px;
-  max-height: 800px;
-  height: 100vh;
-  display: flex;
-  flex-direction: column;
-  background-image: url(../images/background_header.svg);
-  background-repeat: no-repeat;
-  background-position: center;
-  background-size: cover;
-  z-index: -1;
-}
-
-.header__image {
-  z-index: 1;
-  position: absolute;
-  width: 646px;
-  height: 568px;
-  top: 124px;
-  right: 5px;
-  left: auto;
-  margin: 0;
-}
-.nav {
-  display: flex;
-  justify-content: space-between;
-}
-
-.nav__logo {
-  position: relative;
-  left: -50px;
-  width: 105px;
-  height: 39px;
-}
-
-.nav__links {
-  display: flex;
-  padding: 0;
-  margin: 0;
-  gap: 20px;
-  list-style-type: none;
-  font-family: "Inter";
-  font-style: normal;
-  font-weight: 500;
-  font-size: 16px;
-  line-height: 20px;
-}
-
-.nav__link {
-  text-decoration: none;
-  color: #000;
-}
-
-.header__title {
-  max-width: 729px;
-  font-family: "Noto Serif";
-  font-style: italic;
-  font-weight: normal;
-  font-size: 60px;
-  line-height: 72px;
-  gap: 28px;
-  margin: 183px 0 0;
-  letter-spacing: -0.6px;
-  z-index: 3;
-  overflow: hidden;
-}
-
-.header__description {
-  max-width: 683px;
-  left: 80px;
-  font-family: "Noto Serif", "Times New Roman", Times, serif;
-  font-weight: normal;
-  font-size: 20px;
-  line-height: 30px;
-  margin: 28px 0 0;
-}
-
-.header__footer {
-  display: flex;
-  justify-content: space-between;
-  font-family: "Inter", Arial, sans-serif;
-  font-style: normal;
-  font-weight: 500;
-  font-size: 16px;
-  line-height: 20px;
-  color: #838383;
-  margin-top: auto;
-  margin-bottom: 40px;
-}
-
-.header__paragraph {
-  margin: 0px;
-}
-
-.header__address {
-  margin: 0;
-  display: flex;
-  align-items: flex-end;
-}
-
-.header__span-accent {
-  color: #2f80ed;
-  display: block;
-}
-
-.recipes {
-  padding: 100px 80px 215px;
-  height: 100vh;
-  background-color: #0a2750;
-  background-image: url(../images/background_recipes.svg);
-  background-position: center;
-  background-size: cover;
-  background-repeat: no-repeat;
-  color: #fff;
-  margin: 0;
-  gap: 24px;
-}
-
-.recipes__title {
-  font-family: "Inter", Arial, sans-serif;
-  font-style: normal;
-  font-weight: 500;
-  font-size: 44px;
-  line-height: 52px;
-  max-width: 580px;
-  margin: 0;
-}
-
-.recipes__subtitle {
-  font-family: "Noto Serif", "Times New Roman", Times, serif;
-  font-style: normal;
-  font-weight: 500;
-  font-size: 20px;
-  line-height: 30px;
-  margin-bottom: 80px;
-  max-width: 438px;
-}
-
-.recipes__videos {
-  display: flex;
-  justify-content: center;
-  gap: 40px;
-  margin: 0 0 80px;
-  height: 273px;
-}
-
-.div .recipe__videos {
-  width: 480px;
-}
-.recipes__iframe {
-  width: 560px;
-  height: 315px;
-  gap: 24px;
-}
-.recipes__video-caption {
-  display: flex;
-  justify-content: space-between;
-  margin: 24px 0 0;
-  font-family: "Inter", Arial, sans-serif;
-  font-style: normal;
-  font-weight: 500;
-  font-size: 20px;
-  line-height: 30px;
-}
-
-.reservation {
-  padding: 100px 0 120px;
-  background-image: url(../images/background_reservation.svg);
-  background-color: #d9e7ff;
-  background-repeat: no-repeat;
-  background-position: center;
-  background-size: cover;
-}
-
-.reservation__title {
-  margin: 0 0 80px;
-  text-align: center;
-  font-family: "Inter";
-  font-style: normal;
-  font-weight: 500;
-  font-size: 44px;
-  line-height: 52px;
-}
-
-.reservation__form {
-  margin: 0 auto;
-}
-
-.form {
-  max-width: 385px;
-}
-
-.form__fieldset {
-  margin: 0;
-  border: none;
-  padding: 0;
-}
-
-.form__label {
-  display: block;
-  padding: 0;
-  gap: 8px;
-  font-family: "Inter";
-  font-style: normal;
-  font-weight: 500;
-  font-size: 16px;
-  line-height: 20px;
-}
-
-.form__label_type_checkbox {
-  display: flex;
-  justify-content: center;
-}
-
-.form__input {
-  display: flex;
-  margin-bottom: 32px;
-  width: 100%;
-  padding: 0;
-  box-sizing: border-box;
-  height: 60px;
-  font-family: "Inter";
-  font-style: normal;
-  font-weight: normal;
-  font-size: 20px;
-  line-height: 30px;
-  color: #838383;
-}
-
-.form__input::placeholder {
-  color: #838383;
-}
-.form__button {
-  width: 100%;
-  padding: 0;
-  margin-bottom: 32px;
-  height: 60px;
-  font-family: "Inter";
-  font-style: normal;
-  font-weight: 500;
-  font-size: 16px;
-  line-height: 20px;
-  border-radius: 4px;
-  background-color: #2f80ed;
-  color: #fff;
-}
-
-.form__button:hover {
-  opacity: 0.7;
-}
-
-.form__checkbox {
-  appearance: none;
-  width: 20px;
-  height: 20px;
-  border-radius: 2px;
-}
-
-input[type="checkbox"]:checked {
-  background-color: #2f80ed;
-  background-image: url(../images/check.svg);
-  background-position: center;
-  background-repeat: no-repeat;
-}
+@import url(../vendor/normalize.css);
+@import url(../blocks/page.css);
+@import url(../blocks/header.css);
+@import url(../blocks/nav.css);
+@import url(../blocks/recipes.css);
+@import url(../blocks/reservation.css);
+@import url(../blocks/menu.css);
