--- a/blocks/header.css
+++ b/blocks/header.css
@@ -4,6 +4,7 @@
   max-height: 800px;
   height: 100vh;
   display: flex;
+  position: relative;
   flex-direction: column;
   background-image: url(../images/background_header.svg);
   background-repeat: no-repeat;
