--- a/blocks/menu.css
+++ b/blocks/menu.css
@@ -5,33 +5,31 @@
   background-position: center;
   background-repeat: no-repeat;
   background-size: cover;
-  /*max-width: 780px;
-  gap: 24px;*/
+  /*gap: 24px;*/
 }
 
 .menu__title {
   text-align: center;
-  margin: 0 0 24px;
-  font-family: "Inter";
+  margin: 0 auto 24px auto;
+  max-width: 780px;
+  font-family: "Inter" Arial, sans-serif;
   font-style: normal;
   font-weight: 500;
   font-size: 44px;
   line-height: 52px;
-  /*max-width: 780px;*/
 }
 
 .menu__subtitle {
+  max-width: 780px;
   text-align: center;
-  padding: 0 0 100px;
-  margin: 0;
-  font-family: "Noto Serif";
+  margin: 0 auto 100px auto;
+  font-family: "Noto Serif", "Times New Roman", Times, serif;
   font-style: normal;
   font-weight: normal;
   font-size: 20px;
-  line-height: 30 px;
-  /*align-content: center;
-  max-width: 780px;
-  gap: 100px;*/
+  line-height: 30px;
+
+  /*gap: 100px;*/
 }
 
 .menu__cards {
@@ -42,38 +40,4 @@
   margin: 0;
   padding: 0;
   list-style-type: none;
-}
-
-.card {
-  width: 540px;
-}
-
-.card__title {
-  margin: 0 0 32px;
-  font-family: "Inter";
-  font-style: normal;
-  font-weight: bold;
-  font-size: 20px;
-  line-height: 30px;
-}
-
-.card__list {
-  list-style-type: none;
-  padding: 0;
-  margin: 0;
-}
-
-.card__list-item {
-  display: flex;
-  margin: 0 0 16px;
-  font-family: "Noto Serif";
-  font-style: normal;
-  font-weight: normal;
-  font-size: 16px;
-  line-height: 20px;
-}
-
-.card__list-divider {
-  border-bottom: 1px solid black;
-  flex-grow: 1;
 }
