--- a/blocks/about.css
+++ b/blocks/about.css
@@ -5,11 +5,11 @@
 
   50% {
     opacity: 0.6;
-    transform: scale(1.4, 0.6);
   }
 
   100% {
-    opacity: 0;
+    opacity: 1;
+    transform: scale(1.4);
   }
 }
 
@@ -23,7 +23,8 @@
 
 .about__title {
   display: flex;
-  padding: 100px 80px 0;
+  padding: 100px 0 0;
+  margin: 0;
   width: 426px;
   height: 426px;
   max-width: 251px;
@@ -50,16 +51,16 @@
 }
 
 .about__circle_animation_blurred {
-  animation: pulse 1.3s ease-in-out infinite;
+  animation: pulsate 1.3s ease-in-out infinite;
   animation-delay: 0s;
 }
 
 .about__content {
   /*display: flex;
     flex-direction: column;*/
-  margin: 0;
+  margin-left: auto;
   max-width: 660px;
-  padding: 119px 80px 173px;
+  padding: 119px 0 173px;
   max-width: 660px;
   gap: 20px;
   font-family: "Noto Serif";
@@ -74,6 +75,6 @@
   margin: 0 0 20px;
 }
 
-.about__paragraph :last-child {
+.about__paragraph:last-child {
   margin: 0;
 }
