--- a/blocks/footer.css
+++ b/blocks/footer.css
@@ -5,7 +5,7 @@
 .footer__content {
   display: flex;
   justify-content: space-between;
-  padding: 60px 80px 168px;
+  padding: 60px 80px 0;
   color: #fff;
 }
 
@@ -18,7 +18,7 @@
 
 .footer__social-heading {
   margin: 0 0 20px;
-  font-family: "Inter";
+  font-family: "Inter" Arial, sans-serif;
   font-style: normal;
   font-weight: bold;
   font-size: 16px;
@@ -28,22 +28,25 @@
 .footer__list {
   list-style-type: none;
   padding: 0;
+  margin: 0;
 }
 
 .footer__list-item {
   margin-top: 16px;
 }
 
-.footer__social_link {
+.footer__social-link {
+  display: flex;
+  align-items: center;
+  color: #fff;
   transition-duration: 2s;
-  margin: 16px;
 }
 
 .footer__social_link:hover {
   background-color: #c1c1c1;
 }
 .footer__socia_icon {
-  font-family: "Inter";
+  font-family: "Inter" Arial, sans-serif;
   font-style: normal;
   font-weight: normal;
   font-size: 16px;
@@ -52,7 +55,7 @@
 .footer__copyright {
   padding: 108px 80px 60px;
   margin: 0;
-  font-family: "Inter";
+  font-family: "Inter" Arial, sans-serif;
   font-size: 16px;
   font-style: normal;
   font-weight: normal;
