--- a/blocks/nav.css
+++ b/blocks/nav.css
@@ -16,7 +16,7 @@
   margin: 0;
   gap: 20px;
   list-style-type: none;
-  font-family: "Inter";
+  font-family: "Inter" Arial, sans-serif;
   font-style: normal;
   font-weight: 500;
   font-size: 16px;
@@ -28,6 +28,6 @@
   color: #000;
 }
 
-.nav__link :hover {
+.nav__link:hover {
   background-color: #2f80ed;
 }
