--- a/blocks/recipes.css
+++ b/blocks/recipes.css
@@ -35,20 +35,19 @@
   display: flex;
   justify-content: center;
   gap: 40px;
-  margin: 0 0 80px;
+  margin: 80px auto 0 auto;
+  width: 480px;
   height: 273px;
 }
 
-.div .recipe__videos {
-  width: 480px;
-}
 .recipes__iframe {
+  margin: 0;
   width: 560px;
   height: 315px;
-  gap: 24px;
+  /*gap: 24px;*/
 }
 .recipes__video-caption {
-  display: flex;
+  display: block;
   justify-content: space-between;
   margin: 24px 0 0;
   font-family: "Inter", Arial, sans-serif;
