--- a/blocks/footer.css
+++ b/blocks/footer.css
@@ -2,7 +2,7 @@
   background: linear-gradient(180deg, #0a2850 0%, #071931 100%);
 }
 
-.footer__content {
+.footer__column {
   display: flex;
   justify-content: space-between;
   padding: 60px 80px 0;
@@ -38,7 +38,6 @@
 .footer__social-link {
   display: flex;
   align-items: center;
-  color: #fff;
   transition-duration: 2s;
 }
 
