--- a/blocks/recipes.css
+++ b/blocks/recipes.css
@@ -1,6 +1,5 @@
 .recipes {
   padding: 100px 80px 215px;
-  height: 100vh;
   background-color: #0a2750;
   background-image: url(../images/background_recipes.svg);
   background-position: center;
@@ -41,9 +40,11 @@
 }
 
 .recipes__iframe {
+  display: block;
   margin: 0;
-  width: 560px;
-  height: 315px;
+  width: 480px;
+  height: 273px;
+  border: none;
   /*gap: 24px;*/
 }
 .recipes__video-caption {
