--- a/blocks/menu.css
+++ b/blocks/menu.css
@@ -12,7 +12,7 @@
   text-align: center;
   margin: 0 auto 24px auto;
   max-width: 780px;
-  font-family: "Inter" Arial, sans-serif;
+  font-family: "Inter", Arial, sans-serif;
   font-style: normal;
   font-weight: 500;
   font-size: 44px;
