--- a/blocks/nav.css
+++ b/blocks/nav.css
@@ -16,7 +16,7 @@
   margin: 0;
   gap: 20px;
   list-style-type: none;
-  font-family: "Inter" Arial, sans-serif;
+  font-family: "Inter", Arial, sans-serif;
   font-style: normal;
   font-weight: 500;
   font-size: 16px;
@@ -26,6 +26,7 @@
 .nav__link {
   text-decoration: none;
   color: #000;
+  transition: color 0.3s ease-in-out;
 }
 
 .nav__link:hover {
