--- a/blocks/form.css
+++ b/blocks/form.css
@@ -75,7 +75,7 @@
   text-align: center;
 }
 
-.form__checkbox_text {
+.form__checkbox-text {
   text-align: center;
 }
 
@@ -85,6 +85,8 @@
   background-image: url(../images/check.svg);
   background-position: center;
   background-repeat: no-repeat;
+  width: 12px;
+  height: 12px;
 }
 
 /*.form__checkbox_text {
