--- a/blocks/form.css
+++ b/blocks/form.css
@@ -73,20 +73,22 @@
   gap: 12px;
   border-radius: 2px;
   text-align: center;
+  accent-color: #2f80ed;
 }
 
 .form__checkbox-text {
   text-align: center;
 }
 
-.form__checkbox:checked {
+.form__checkbox_checkbox :checked {
   justify-content: center;
-  background-color: #2f80ed;
   background-image: url(../images/check.svg);
   background-position: center;
   background-repeat: no-repeat;
-  width: 12px;
-  height: 12px;
+  width: 20px;
+  height: 20px;
+  margin: 0;
+  align-items: center;
 }
 
 /*.form__checkbox_text {
